--- a/css/main.css
+++ b/css/main.css
@@ -5467,7 +5467,7 @@ a.bg-dark:focus, a.bg-dark:hover {
 .text-lowercase {
   text-transform: lowercase !important; }
 
-.text-uppercase, .header-subtle {
+.text-uppercase {
   text-transform: uppercase !important; }
 
 .text-capitalize {
@@ -5512,10 +5512,10 @@ a.text-success:focus, a.text-success:hover {
 a.text-info:focus, a.text-info:hover {
   color: #117a8b !important; }
 
-.text-warning, .header-subtle {
+.text-warning {
   color: #ffc107 !important; }
 
-a.text-warning:focus, a.header-subtle:focus, a.text-warning:hover, a.header-subtle:hover {
+a.text-warning:focus, a.text-warning:hover {
   color: #d39e00 !important; }
 
 .text-danger {
@@ -5553,24 +5553,539 @@ a.text-dark:focus, a.text-dark:hover {
   visibility: hidden !important; }
 
 body {
-  padding: 2rem 0; }
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  overflow-x: hidden; }
 
-html {
-  font-size: 14px; }
+@font-face {
+  font-family: 'simplifica';
+  src: url("simplifica.ttf"); }
 
-@media (min-width: 576px) {
-  html {
-    font-size: 16px; } }
+.abouttext {
+  font-family: "Reenie Beanie", cursive;
+  font-size: 2em;
+  font-weight: lighter;
+  letter-spacing: 2px; }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 20px; } }
+.copyright {
+  font-family: 'simplifica';
+  letter-spacing: 5px;
+  color: silver; }
 
+img.profilepic {
+  position: relative;
+  max-width: 50%;
+  top: 10%;
+  left: 25%; }
+
+.catheadwhite {
+  width: 30%; }
+
+p {
+  font-size: 18px; }
+
+p.small {
+  font-size: 16px; }
+
+a, a.active, a:active, a:focus, a:hover {
+  color: #EF6362;
+  outline: none; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 600;
+  text-transform: uppercase; }
+
+.text-center {
+  margin: 20px; }
+
+.img-centered {
+  margin: 0 auto; }
+
+/* LOGO WITH ANIMATION */
+.logo {
+  width: 20%;
+  height: auto;
+  animation-name: logoshake;
+  animation-duration: 1s; }
+
+@keyframes logoshake {
+  from {
+    transform: scale3d(1, 1, 1); }
+  50% {
+    transform: scale3d(1.05, 1.05, 1.05); }
+  to {
+    transform: scale3d(1, 1, 1); } }
+
+/* LOGO WITH ANIMATION -- END*/
+section {
+  padding: 75px 0; }
+
+section h2 {
+  font-size: 3em;
+  margin: 0; }
+
+section.success {
+  color: white;
+  background: #1c313f; }
+
+@media (max-width: 767px) {
+  section {
+    padding: 75px 0; }
+  section.first {
+    padding-top: 75px; } }
+
+/*BOTTOM - TO THE TOP BUTTON*/
+.scroll-top {
+  position: fixed;
+  z-index: 1049;
+  right: 2%;
+  bottom: 2%;
+  width: 50px;
+  height: 50px; }
+
+.scroll-top .btn {
+  background-color: #ef6362;
+  font-size: 16px;
+  line-height: 28px;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 100%;
+  border: none; }
+
+.scroll-top .btn:focus {
+  outline: none; }
+
+.scroll-top .btn:hover {
+  background-color: rgba(239, 97, 97, 0.52); }
+
+#mainNav {
+  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  border: none;
+  background: #2C3E50; }
+
+#mainNav a:focus {
+  outline: none; }
+
+#mainNav .navbar-brand {
+  font-size: 1.1rem;
+  color: white; }
+
+#mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
+  color: white; }
+
+#mainNav .navbar-nav {
+  letter-spacing: 1px; }
+
+#mainNav .navbar-nav li.nav-item a.nav-link {
+  color: white; }
+
+#mainNav .navbar-nav li.nav-item a.nav-link:hover {
+  color: #ef6362;
+  outline: none; }
+
+#mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
+  color: white; }
+
+#mainNav .navbar-toggler {
+  font-size: 14px;
+  padding: 11px;
+  text-transform: uppercase;
+  color: white;
+  border-color: white; }
+
+#mainNav .navbar-toggler:focus, #mainNav .navbar-toggler:hover {
+  color: white;
+  border-color: #EF6362;
+  background-color: #EF6362; }
+
+/* MEDIA SCREEN MIN-WIDTH 992px */
 @media (min-width: 992px) {
-  html {
-    font-size: 28px; } }
+  img.profilepic {
+    position: relative;
+    max-width: 70%;
+    top: 10%;
+    left: 15%; }
+  #mainNav {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
+    -moz-transition: padding-top 0.3s, padding-bottom 0.3s;
+    transition: padding-top 0.3s, padding-bottom 0.3s; }
+  #mainNav .navbar-brand {
+    font-size: 2em;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s; }
+  #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
+    color: white;
+    border-radius: 3px;
+    background: #EF6362; }
+  #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
+    color: white;
+    background: #EF6362; }
+  #mainNav.navbar-shrink {
+    padding-top: 10px;
+    padding-bottom: 10px; }
+  #mainNav.navbar-shrink .navbar-brand {
+    font-size: 1.5em; } }
 
-.header-subtle {
-  font-size: 1.2rem;
-  letter-spacing: .12em;
-  opacity: .6; }
+header.masthead {
+  padding-top: 100px;
+  padding-bottom: 50px;
+  text-align: center;
+  color: white;
+  background: #1C313F; }
+
+header.masthead img {
+  display: block;
+  margin: 0 auto 20px; }
+
+header.masthead .intro-text .name {
+  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 2em;
+  font-weight: 700;
+  display: block;
+  text-transform: uppercase; }
+
+header.masthead .intro-text .skills {
+  font-size: 1em;
+  font-weight: 100; }
+
+/***** MEDIA SCREEN 992px END*****/
+/*Tablet + Desktop*/
+@media (min-width: 768px) {
+  header.masthead {
+    padding-top: 150px;
+    padding-bottom: 100px; }
+  header.masthead .intro-text .name {
+    font-size: 2.75em; }
+  header.masthead .intro-text .skills {
+    font-size: 1.75em;
+    color: #d9d9d9; } }
+
+.pgrid {
+  font-size: 15px; }
+
+#portfolio .portfolio-item {
+  right: 0;
+  margin: 0 0 15px; }
+
+#portfolio .portfolio-item .portfolio-link {
+  position: relative;
+  display: block;
+  max-width: 400px;
+  margin: 0 auto;
+  cursor: pointer; }
+
+#portfolio .portfolio-item .portfolio-link .caption {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all ease 0.5s;
+  -moz-transition: all ease 0.5s;
+  transition: all ease 0.5s;
+  opacity: 0;
+  background: rgba(239, 99, 98, 0.9); }
+
+#portfolio .portfolio-item .portfolio-link .caption:hover {
+  opacity: 1; }
+
+#portfolio .portfolio-item .portfolio-link .caption .caption-content {
+  font-size: 20px;
+  position: absolute;
+  top: 30%;
+  width: 100%;
+  height: 20px;
+  margin-top: -12px;
+  text-align: center;
+  color: white; }
+
+#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
+  margin-top: -12px; }
+
+#portfolio .portfolio-item .portfolio-link .caption .caption-content h3, #portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
+  margin: 0; }
+
+#portfolio * {
+  z-index: 2; }
+
+@media (min-width: 767px) {
+  #portfolio .portfolio-item {
+    margin: 0 0 30px; } }
+
+.portfolio-modal .modal-dialog {
+  max-width: 100%;
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  border: none;
+  border-radius: 0;
+  background-clip: border-box;
+  -webkit-box-shadow: none;
+  box-shadow: none; }
+
+.portfolio-modal .modal-dialog .modal-content {
+  padding: 100px 0;
+  border: 0;
+  border-radius: 0; }
+
+.portfolio-modal .modal-dialog .modal-content h2 {
+  font-size: 3em;
+  margin: 0;
+  margin-bottom: 50px; }
+
+.portfolio-modal .modal-dialog .modal-content img {
+  margin-bottom: 30px; }
+
+.portfolio-modal .modal-dialog .modal-content .item-details {
+  margin: 30px 0; }
+
+.portfolio-modal .close-modal {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  width: 75px;
+  height: 75px;
+  cursor: pointer;
+  background-color: transparent; }
+
+.portfolio-modal .close-modal:hover {
+  opacity: 0.1; }
+
+.portfolio-modal .close-modal .lr {
+  z-index: 1051;
+  width: 1px;
+  height: 75px;
+  margin-left: 35px;
+  /* IE 9 */
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  background-color: #2C3E50; }
+
+.portfolio-modal .close-modal .lr .rl {
+  z-index: 1052;
+  width: 1px;
+  height: 75px;
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+  background-color: #2C3E50; }
+
+.portfolio-modal .modal-backdrop {
+  display: none;
+  opacity: 0; }
+
+.floating-label-form-group {
+  position: relative;
+  margin-bottom: 0;
+  padding-bottom: 0.5em;
+  border-bottom: 1px solid #eeeeee; }
+
+.floating-label-form-group input, .floating-label-form-group textarea {
+  font-size: 1.5em;
+  position: relative;
+  z-index: 1;
+  padding-right: 0;
+  padding-left: 0;
+  resize: none;
+  border: none;
+  border-radius: 0;
+  background: none;
+  box-shadow: none !important; }
+
+.floating-label-form-group label {
+  font-size: 0.85em;
+  line-height: 1.764705882em;
+  position: relative;
+  z-index: 0;
+  top: 2em;
+  display: block;
+  margin: 0;
+  -webkit-transition: top 0.3s ease, opacity 0.3s ease;
+  -moz-transition: top 0.3s ease, opacity 0.3s ease;
+  -ms-transition: top 0.3s ease, opacity 0.3s ease;
+  transition: top 0.3s ease, opacity 0.3s ease;
+  vertical-align: middle;
+  vertical-align: baseline;
+  opacity: 0; }
+
+.floating-label-form-group:not(:first-child) {
+  padding-left: 14px;
+  border-left: 1px solid #eeeeee; }
+
+.floating-label-form-group-with-value label {
+  top: 0;
+  opacity: 1; }
+
+.floating-label-form-group-with-focus label {
+  color: #ef6362; }
+
+form .row:first-child .floating-label-form-group {
+  border-top: 1px solid #eeeeee; }
+
+footer {
+  color: white; }
+
+footer h3 {
+  margin-bottom: 30px; }
+
+footer .footer-above {
+  padding-top: 50px;
+  background-color: #2C3E50; }
+
+footer .footer-col {
+  margin-bottom: 50px; }
+
+footer .footer-below {
+  padding: 25px 0;
+  background-color: #2c3e50; }
+
+.btn-outline {
+  font-size: 20px;
+  margin-top: 15px;
+  transition: all 0.3s ease-in-out;
+  color: white;
+  border: solid 2px white;
+  background: transparent; }
+
+.btn-outline.active, .btn-outline:active, .btn-outline:focus, .btn-outline:hover {
+  color: #ef6362;
+  border: solid 2px white;
+  background: white; }
+
+.btn-primary {
+  font-weight: 700;
+  color: white;
+  border-color: #2C3E50;
+  background-color: #2C3E50; }
+
+#sendMessageButton {
+  background-color: #ef6362;
+  border: none; }
+
+#sendMessageButton:hover {
+  background-color: rgba(239, 97, 97, 0.52); }
+
+.btn-social {
+  font-size: 20px;
+  line-height: 45px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border: 2px solid white;
+  border-radius: 100%; }
+
+.btn.active, .btn:active, .btn:focus {
+  outline: none; }
+
+/****** ABOUT CARD*****/
+.cardcontainer {
+  height: 400px;
+  width: 700px;
+  margin: 0 auto;
+  animation-name: facepic;
+  animation-duration: 4s;
+  animation-fill-mode: forwards; }
+
+.leftbox {
+  width: 300px;
+  height: 400px;
+  background-color: #f0ebe8; }
+
+.name {
+  font-family: 'Quicksand', sans-serif;
+  color: black;
+  font-size: 40px;
+  position: relative;
+  top: 120px;
+  left: 50px;
+  animation-name: facepic;
+  animation-duration: 3s;
+  animation-fill-mode: forwards; }
+
+.imd {
+  font-family: 'Quicksand', sans-serif;
+  color: #4B4B4B;
+  font-size: 15px;
+  position: relative;
+  top: 95px;
+  left: 55px;
+  animation-name: facepic;
+  animation-duration: 3s;
+  animation-fill-mode: forwards; }
+
+.schoollink {
+  color: #ef6362; }
+
+.hooverover {
+  position: relative;
+  top: 175px;
+  text-align: center;
+  color: darkgrey; }
+
+.laurieface {
+  animation-name: facepic;
+  animation-duration: 2s;
+  animation-fill-mode: forwards; }
+
+/************* profile picture and flip bio START****************/
+.card {
+  width: 400px;
+  height: 400px;
+  position: relative;
+  bottom: 400px;
+  left: 300px;
+  perspective: 600px;
+  animation-name: profilepic;
+  animation-duration: 4s;
+  animation-fill-mode: forwards; }
+
+.content {
+  border: 0px;
+  position: relative;
+  padding: none;
+  width: 400px;
+  height: 400px;
+  transition: transform 1s;
+  transform-style: preserve-3d; }
+
+.card:hover .content {
+  transform: rotateY(180deg);
+  transition: transform 0.5s; }
+
+.front, .back {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: white;
+  line-height: 30px;
+  color: black;
+  text-align: center;
+  font-size: 10px;
+  backface-visibility: hidden; }
+
+.back {
+  background: #f0ebe8;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 20px;
+  color: black;
+  transform: rotateY(180deg); }
+
+.click {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 20px;
+  color: black;
+  margin-left: 60px; }
+
+/************* profile picture and flip bio END****************/
+@keyframes facepic {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
