--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,5 +1,8 @@
 // Additional colours
 $off-white: #feffff;
+$melon: #ef6362;
+$mainblue: #1C313F;
+$fadedblue: #2C3E50;
 
 // Override bootstrap default
 $body-bg: $off-white;
