--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,7 +44,7 @@ p.small {
 }
 
 a, a.active, a:active, a:focus, a:hover {
-  color: #EF6362;
+  color: $melon;
   outline: none;
 }
 
@@ -60,6 +60,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .img-centered {
   margin: 0 auto;
+}
+
+#contact{
+  background-color: white;
 }
 
 
@@ -123,8 +127,10 @@ section.success {
   height: 50px;
 }
 
+
+
 .scroll-top .btn {
-  background-color: #ef6362;
+  background-color: $melon;
   font-size: 16px;
   line-height: 28px;
   width: 50px;
@@ -172,7 +178,7 @@ section.success {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-  color: #ef6362;
+  color: $melon;
   outline: none;
 }
 
@@ -190,8 +196,8 @@ section.success {
 
 #mainNav .navbar-toggler:focus, #mainNav .navbar-toggler:hover {
   color: white;
-  border-color: #EF6362;
-  background-color: #EF6362;
+  border-color: $melon;
+  background-color: $melon;
 }
 
 
@@ -220,11 +226,11 @@ section.success {
   #mainNav .navbar-nav>li.nav-item>a.nav-link.active {
     color: white;
     border-radius: 3px;
-    background: #EF6362;
+    background: $melon;
   }
   #mainNav .navbar-nav>li.nav-item>a.nav-link.active:active, #mainNav .navbar-nav>li.nav-item>a.nav-link.active:focus, #mainNav .navbar-nav>li.nav-item>a.nav-link.active:hover {
     color: white;
-    background: #EF6362;
+    background: $melon;
   }
   #mainNav.navbar-shrink {
     padding-top: 10px;
@@ -464,7 +470,7 @@ header.masthead .intro-text .skills {
 }
 
 .floating-label-form-group-with-focus label {
-  color: #ef6362;
+  color: $melon;
 }
 
 form .row:first-child .floating-label-form-group {
@@ -503,7 +509,7 @@ footer .footer-below {
 }
 
 .btn-outline.active, .btn-outline:active, .btn-outline:focus, .btn-outline:hover {
-  color: #ef6362;
+  color: $melon;
   border: solid 2px white;
   background: white;
 }
@@ -516,7 +522,7 @@ footer .footer-below {
 }
 
 #sendMessageButton {
-  background-color: #ef6362;
+  background-color: $melon;
   border: none;
 }
 
@@ -582,7 +588,7 @@ footer .footer-below {
 }
 
 .schoollink{
-  color: #ef6362;
+  color: $melon;
 }
 
 .hooverover{
@@ -664,5 +670,59 @@ footer .footer-below {
   }
   100% {
     opacity: 1;
+  }
+}
+
+
+/******************** NEWEST ************/
+.image {
+  width: 100%;
+  flex-grow: 1;
+  flex-shrink: 1;
+  margin: 7.5px 0;
+  box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.5);
+  transition: 0.3s;
+}
+
+.image:hover {
+  transform: scale(1.055);
+}
+
+
+/* Medium Screens */
+
+@media (min-width: 640px) {
+  .image {
+    width: 48%;
+    margin: 1%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .image {
+    width: 30%;
+    margin: 1.5%;
+  }
+}
+
+
+/* B + W architecture images */
+
+.modal img {
+  width: 80vw;
+  max-width: 720px;
+  height: auto;
+}
+
+@media (max-height: 640px) and (orientation: landscape) {
+  .close {
+    top: 0;
+    right: 0;
+    width: 100%;
+    padding: 5px 15px;
+    color: #FFF;
+    background-color: #000;
+    text-align: right;
+    z-index: 1;
   }
 }
